--- a/Index.html
+++ b/Index.html
@@ -12,8 +12,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script> 
 
-    <link href="Style.css"rel="stylesheet">
-    <script src="Script.js"></script>	
+    <link href="style.css"rel="stylesheet">
+    <script src="script.js"></script>	
 
 	
     </script>
